--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,13 @@
 {
-  "singleQuote": true,
-  "trailingComma": "none",
-  "semi": true,
-  "bracketSpacing": true
+    "singleQuote": true,
+    "printWidth": 80,
+    "editor.formatOnSave": true,
+    "proseWrap": "always",
+    "tabWidth": 2,
+    "requireConfig": false,
+    "useTabs": false,
+    "trailingComma": "none",
+    "bracketSpacing": true,
+    "jsxBracketSameLine": false,
+    "semi": true
 }
